--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -6,8 +6,6 @@
     android:background="@drawable/dawn"
     tools:context=".GameBoard"
     android:id="@+id/gameBoardLayout">
-
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,37 +13,33 @@
         android:padding="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_2sdp"
         >
+        <View android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
         <LinearLayout
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="@dimen/_100sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
             android:background="@drawable/mode_layout"
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="2"/>
-            <TextView
-                style="?android:attr/textAppearanceSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/lifes"
-                android:clickable="false"
-                android:textDirection="ltr"
-                android:background="#0000"
-                android:text="4" />
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="false"
+                android:layout_marginLeft="@dimen/_10sdp"
                 android:src="@drawable/heart"/>
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+            <TextView
+                style="?android:attr/textAppearanceSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:id="@+id/lifes"
+                android:clickable="false"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:textDirection="ltr"
+                android:background="#0000"
+                android:text="4" />
         </LinearLayout>
         <View
             android:layout_width="0dp"
@@ -54,102 +48,86 @@
             />
         <LinearLayout
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="@dimen/_100sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
             android:background="@drawable/mode_layout"
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="2"/>
-            <TextView
-                style="?android:attr/textAppearanceSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/timerText"
-                android:clickable="false"
-                android:gravity="center"
-                android:background="#0000"
-                android:text="0" />
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="false"
+                android:layout_marginLeft="@dimen/_10sdp"
                 android:src="@drawable/stopwatch"/>
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+            <TextView
+                style="?android:attr/textAppearanceSmall"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="wrap_content"
+                android:id="@+id/timerText"
+                android:clickable="false"
+                android:background="#0000"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:text="0" />
         </LinearLayout>
         <View android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
         <LinearLayout
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="@dimen/_100sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/mode_layout"
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="2"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:src="@drawable/coin"/>
             <TextView
                 style="?android:attr/textAppearanceSmall"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/_50sdp"
                 android:layout_height="wrap_content"
                 android:id="@+id/score"
                 android:clickable="false"
                 android:background="#0000"
                 android:textDirection="ltr"
-                android:gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
                 android:text="0" />
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="false"
-                android:src="@drawable/coin"/>
-            <View android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:background="@drawable/mode_layout"
-        android:padding="@dimen/_2sdp"
-        android:layout_marginBottom="@dimen/_5sdp"
-        android:orientation="horizontal" >
-        <View android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="2"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:src="@drawable/heart"/>
         <View android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
+    </LinearLayout>
+    <LinearLayout
+        style="?android:attr/buttonBarButtonStyle"
+        android:id="@+id/gameModeHolder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:background="@drawable/mode_layout"
+        android:padding="@dimen/_1sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:orientation="horizontal" >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:clickable="false"
+            android:layout_gravity="center"
+            android:src="@drawable/heart"/>
         <TextView
             style="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/game_mode_text"
             android:clickable="false"
-            android:gravity="center"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:background="#0000"
-            android:text="Sudden Death" />
-        <View android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="2"/>
+            android:layout_marginRight="@dimen/_20sdp"
+            android:layout_gravity="center"
+            android:text="Death" />
     </LinearLayout>
 </FrameLayout>
