Apply new UI for game board and fix tic toc sound.

--- a/app/src/main/res/drawable/oval_warm_button.xml
+++ b/app/src/main/res/drawable/oval_warm_button.xml
@@ -2,16 +2,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- くぼみ -->
-    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+    <item>
         <shape android:shape="oval" >
-            <solid android:color="#102f2f2f" />
+            <solid android:color="@color/darkerGrey" />
         </shape>
     </item>
 
     <!-- グラデーション下地 -->
-    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+    <item android:bottom="@dimen/_5sdp">
         <shape android:shape="oval" >
-            <solid android:color="#FFB914" />
+            <solid android:color="@color/darkGrey" />
         </shape>
     </item>
 </layer-list>
