--- a/app/src/main/res/drawable/death_mode.xml
+++ b/app/src/main/res/drawable/death_mode.xml
@@ -5,7 +5,7 @@
     <item>
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_20sdp" />
-            <solid android:color="#680010" />
+            <solid android:color="@color/darkerRed" />
         </shape>
     </item>
 
@@ -14,7 +14,7 @@
         android:bottom="5sp">
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_20sdp" />
-            <solid android:color="#900016" />
+            <solid android:color="@color/darkRed" />
         </shape>
     </item>
 </layer-list>
