--- a/app/src/main/res/drawable/no_score_mode.xml
+++ b/app/src/main/res/drawable/no_score_mode.xml
@@ -5,7 +5,7 @@
     <item>
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_20sdp" />
-            <solid android:color="#393939" />
+            <solid android:color="@color/darkerGrey" />
         </shape>
     </item>
 
@@ -14,7 +14,7 @@
         android:bottom="5sp">
         <shape android:shape="rectangle" >
             <corners android:radius="@dimen/_20sdp" />
-            <solid android:color="#59595a" />
+            <solid android:color="@color/darkGrey" />
         </shape>
     </item>
 </layer-list>
