--- a/app/src/main/res/layout/activity_game_board.xml
+++ b/app/src/main/res/layout/activity_game_board.xml
@@ -25,8 +25,8 @@
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:clickable="false"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:src="@drawable/heart"/>
@@ -55,8 +55,8 @@
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:clickable="false"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:src="@drawable/stopwatch"/>
@@ -81,8 +81,8 @@
             android:padding="@dimen/_5sdp"
             android:orientation="horizontal" >
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:clickable="false"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:src="@drawable/coin"/>
@@ -112,8 +112,8 @@
         android:layout_marginBottom="@dimen/_5sdp"
         android:orientation="horizontal" >
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_marginLeft="@dimen/_20sdp"
             android:clickable="false"
             android:layout_gravity="center"
