--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
         android:padding="10sp"
         android:layout_width="match_parent"
         android:layout_marginBottom="5sp"
-        android:background="@drawable/leaderboard_row"
+        android:background="@drawable/mode_layout"
         android:showDividers="none"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginRight="@dimen/_5sdp"
