--- a/app/src/main/res/layout/replay_dialog.xml
+++ b/app/src/main/res/layout/replay_dialog.xml
@@ -2,15 +2,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffffff">
-
-    <ImageView
+    android:background="@color/white">
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:id="@+id/a"
+        android:layout_height="wrap_content"
+        android:id="@+id/game_over_text"
+        android:text="Game Over"
         android:gravity="center"
-        android:src="@drawable/game_over"
-        android:scaleType="fitCenter" />
+        android:textSize="@dimen/_70sdp"
+        android:textColor="@color/darkerRed"
+        />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,8 +76,9 @@
             android:text="Yes"
             android:id="@+id/btn_replay"
             android:layout_below="@+id/text_dialog"
-            android:background="#86AC41"
+            android:background="@drawable/rectangle_green_button"
             android:layout_marginRight="5sp"
+            android:elevation="0sp"
             android:textColor="#ffffffff" />
         <Button
             android:layout_width="wrap_content"
@@ -85,8 +87,9 @@
             android:id="@+id/btn_no"
             android:gravity="center_vertical|center_horizontal"
             android:layout_below="@+id/text_dialog"
-            android:background="#CE5A57"
+            android:background="@drawable/rectangle_red_button"
             android:layout_marginLeft="5sp"
+            android:elevation="0sp"
             android:textColor="#ffffffff" />
         <View
             android:layout_width="0dp"
