Change Leaderboard UI.

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
         android:padding="10sp"
         android:layout_width="match_parent"
         android:layout_marginBottom="5sp"
-        android:background="@drawable/mode_layout"
+        android:background="@drawable/leaderboard_row"
         android:showDividers="none"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginRight="@dimen/_5sdp"
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:layout_marginLeft="10sp"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:shadowColor="#2f2f2f"
                 android:shadowDx="0"
                 android:shadowDy="0"
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:textColor="#FFF"
+                android:textColor="#000"
                 android:shadowColor="#2f2f2f"
                 android:shadowDx="0"
                 android:shadowDy="0"
