--- a/app/src/main/res/drawable/leaderboard_row.xml
+++ b/app/src/main/res/drawable/leaderboard_row.xml
@@ -2,18 +2,18 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- くぼみ -->
-    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+    <item  android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" >
         <shape android:shape="rectangle" >
-            <corners android:radius="@dimen/_10sdp" />
-            <solid android:color="#102f2f2f" />
+            <corners android:radius="@dimen/_5sdp" />
+            <solid android:color="#dedede" />
         </shape>
     </item>
 
     <!-- グラデーション下地 -->
-    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:gravity="center_horizontal|center_vertical">
+    <item android:left="@dimen/_10sdp" android:right="@dimen/_10sdp" android:bottom="@dimen/_5sdp">
         <shape android:shape="rectangle" >
-            <corners android:radius="@dimen/_10sdp" />
-            <solid android:color="#272143" />
+            <corners android:radius="@dimen/_5sdp" />
+            <solid android:color="#fefefe" />
         </shape>
     </item>
 
