--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -9,7 +9,7 @@
     android:rowCount="12"
     android:background="@drawable/night"
     android:layout_centerInParent="true"
-    tools:context="com.quarklab.volo.SquareBash"
+    tools:context="com.quarklabs.volo.SquareBash"
     android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
