--- a/app/src/main/res/layout/activity_square_bash.xml
+++ b/app/src/main/res/layout/activity_square_bash.xml
@@ -109,7 +109,7 @@
             android:padding="5sp"
             android:soundEffectsEnabled="false"
 
-            android:src="@drawable/play"
+            android:src="@drawable/play_with_fb"
             android:elevation="0sp"
             android:layout_gravity="center_horizontal|center_vertical"/>
         <View
