--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="darkerGrey">#393939</color>
     <color name="darkGreen">#0a9c30</color>
     <color name="darkerGreen">#077123</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
