--- a/app/src/main/res/layout/modes_fragment_layout.xml
+++ b/app/src/main/res/layout/modes_fragment_layout.xml
@@ -4,10 +4,31 @@
     android:layout_height="match_parent"
     android:background="@drawable/dawn"
     >
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello World"
-        android:textColor="#fff"
-        />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        >
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/leaderboard" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Game Modes"
+            android:id="@+id/title"
+            android:textSize="30sp"
+            android:textColor="#fff"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
 </LinearLayout>
