--- a/app/src/main/res/layout/how_to_play_fragment.xml
+++ b/app/src/main/res/layout/how_to_play_fragment.xml
@@ -70,6 +70,13 @@
                 android:text="@string/how_to_play_text_double_tab_modes"
                 android:textColor="@color/white"
                 />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                android:text="@string/how_to_play_text_no_score_modes"
+                android:textColor="@color/white"
+                />
 
 
             <TextView
